force-app/main/default/objects/Permit_to_Work__c/Permit_to_Work__c.object-meta.xml
<CustomObject>
    <description>Permit to Work records controlling safe access for high-risk activities on EPC project sites.</description>
    <label>Permit to Work</label>
    <nameField>
        <displayFormat>PTW-{00000}</displayFormat>
        <label>PTW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permits to Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>