force-app/main/default/objects/Permit_to_Work__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Work Area</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>