force-app/main/default/objects/Permit_to_Work__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Permits to Work (Issued)</relationshipLabel>
    <relationshipName>Permits_to_Work_Issued</relationshipName>
    <type>Lookup</type>
</CustomField>