force-app/main/default/objects/Permit_to_Work__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Permits to Work</relationshipLabel>
    <relationshipName>Permits_to_Work</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>