force-app/main/default/objects/Permit_to_Work__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid From</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>