force-app/main/default/objects/Permit_to_Work__c/fields/WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>WBS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Permits to Work</relationshipLabel>
    <relationshipName>Permits_to_Work</relationshipName>
    <type>Lookup</type>
</CustomField>