force-app/main/default/objects/Permit_to_Work__c/fields/Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Description__c</fullName>
    <label>Work Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>